--- a/index.html
+++ b/index.html
@@ -214,9 +214,8 @@
           <div class="kontakt-daten">
             <p>
               <strong>E-Mail:</strong>
-              <a href="mailto:mack.katrin83@gmail.com">mack.katrin83@gmail.com</a>
-            </p>
-
+              <span id="email"></span>
+              </p>
             <p>
               <strong>Ort:</strong> Remote · Deutschland
             </p>
@@ -239,5 +238,6 @@
 
 </body>
 </html>
+
 
 
