--- a/index.html
+++ b/index.html
@@ -243,6 +243,11 @@
               
                   <button type="submit">Nachricht senden</button>
                 </form>
+
+      <p class="form-hinweis">
+  Mit dem Absenden des Formulars erklären Sie sich damit einverstanden,
+  dass Ihre Angaben zur Bearbeitung Ihrer Anfrage verwendet werden.
+</p>
       
         </section>
 
@@ -262,6 +267,7 @@
 
 </body>
 </html>
+
 
 
 
