--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </section>    
    
 
-    <section class="ueber-mich" id="ueber-mich">
+    <section class="ueber-mich content-box" id="ueber-mich">
       <h2>Über mich</h2>
       
       <p>
@@ -267,6 +267,7 @@
 
 </body>
 </html>
+
 
 
 
