--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           <div class="kontakt-daten">
             <p>
               <strong>E-Mail:</strong>
-              <span id="email"></span>
+              <span id="email-link"></span>
               </p>
             <p>
               <strong>Ort:</strong> Remote · Deutschland
@@ -267,6 +267,7 @@
 
 </body>
 </html>
+
 
 
 
