--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Katrin Mack</title>
-  <meta name="description" content="Kurze Beschreibung der Seite">
+  <title>Katrin Mack – Softwareentwicklerin</title>
+  <meta name="description" content="Portfolio von Katrin Mack – Softwareentwicklerin mit Fokus auf strukturierte Logik, eigenständiges Arbeiten und effiziente Remote-Zusammenarbeit.">
+
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -257,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
