--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
           </p>
 
           <ul class="projekt-details">
-            <li>Technologie: JavaScript, HTML, CSS</li>
-            <li>Anwendung: Browserbasiertes Lernkarten-Spiel</li>
-            <li>Schwerpunkte: Spiellogik, Struktur, Benutzerinteraktion</li>
-            <li>Rolle: Eigenständige technische Konzeption und Umsetzung</li>
+            <li><strong>Technologie:</strong> JavaScript, HTML, CSS</li>
+            <li><strong>Anwendung:</strong> Browserbasiertes Lernkarten-Spiel</li>
+            <li><strong>Schwerpunkte:</strong> Spiellogik, Struktur, Benutzerinteraktion</li>
+            <li><strong>Rolle:</strong> Eigenständige technische Konzeption und Umsetzung</li>
           </ul>
         </div>
 
@@ -258,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
