--- a/datenschutz.html
+++ b/datenschutz.html
@@ -23,10 +23,31 @@
   Diese Daten sind technisch erforderlich, um die Website anzuzeigen.
 </p>
 
-<h2>3. Kontaktaufnahme</h2>
+<h2>3. Kontaktformular</h2>
+
 <p>
-  Wenn Sie per E-Mail Kontakt mit mir aufnehmen, werden Ihre Angaben
-  ausschließlich zur Bearbeitung der Anfrage gespeichert.
+Wenn Sie mir über das Kontaktformular Anfragen zukommen lassen,
+werden Ihre Angaben aus dem Formular inklusive der von Ihnen dort
+angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den
+Fall von Anschlussfragen bei mir gespeichert.
+</p>
+
+<p>
+Die Verarbeitung der in das Kontaktformular eingegebenen Daten erfolgt
+auf Grundlage von Art. 6 Abs. 1 lit. b DSGVO (vorvertragliche Maßnahmen)
+bzw. Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse).
+</p>
+
+<p>
+Für die Bereitstellung des Kontaktformulars nutze ich den Dienst
+<strong>Basin</strong>, einen Anbieter mit Serverstandorten in der EU.
+Die über das Formular übermittelten Daten werden verschlüsselt übertragen
+und ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.
+</p>
+
+<p>
+Die Daten werden gelöscht, sobald sie für den Zweck ihrer Erhebung
+nicht mehr erforderlich sind.
 </p>
 
 <h2>4. Ihre Rechte</h2>
@@ -37,3 +58,4 @@
 
 </body>
 </html>
+
