--- a/datenschutz.html
+++ b/datenschutz.html
@@ -10,18 +10,34 @@
 
 <h2>1. Verantwortliche Stelle</h2>
 <p>
-  Katrin Mack<br>
-  Hauptstrasse 6<br>
-  72654 Neckartenzlingen<br>
-  Deutschland
+E-Mail: 	woehrle.katrin@gmail.com
 </p>
 
-<h2>2. Erhebung und Speicherung personenbezogener Daten</h2>
+
+<h2>2. Hosting und Server-Logfiles</h2>
 <p>
-  Beim Aufruf dieser Website werden durch den Hosting-Anbieter automatisch
-  Informationen in sogenannten Server-Logfiles erhoben und gespeichert.
-  Diese Daten sind technisch erforderlich, um die Website anzuzeigen.
+Diese Website wird bei einem externen Hosting-Anbieter betrieben.
+Beim Aufruf der Website erhebt und speichert der Hosting-Anbieter
+automatisch Informationen in sogenannten Server-Logfiles, die Ihr
+Browser automatisch übermittelt.
 </p>
+
+<p>
+Dies sind insbesondere:
+</p>
+<ul>
+  <li>IP-Adresse</li>
+  <li>Datum und Uhrzeit der Anfrage</li>
+  <li>Browsertyp und Browserversion</li>
+  <li>Betriebssystem</li>
+  <li>Referrer-URL</li>
+</ul>
+
+<p>
+Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO
+(berechtigtes Interesse an einem sicheren und stabilen Betrieb der Website).
+</p>
+
 
 <h2>3. Kontaktformular</h2>
 
@@ -46,16 +62,43 @@ und ausschließlich zur Bearbeitung Ihrer Anfrage verwendet.
 </p>
 
 <p>
-Die Daten werden gelöscht, sobald sie für den Zweck ihrer Erhebung
-nicht mehr erforderlich sind.
+Mit dem Anbieter Basin besteht ein Vertrag zur Auftragsverarbeitung
+gemäß Art. 28 DSGVO.
 </p>
 
-<h2>4. Ihre Rechte</h2>
 <p>
-  Sie haben jederzeit das Recht auf Auskunft, Berichtigung oder Löschung
-  Ihrer gespeicherten personenbezogenen Daten.
+Die Daten werden spätestens nach 6 Monaten gelöscht,
+sofern keine gesetzlichen Aufbewahrungspflichten entgegenstehen.
 </p>
+
+
+<h2>4. Rechte der betroffenen Personen</h2>
+<p>
+Sie haben jederzeit das Recht:
+</p>
+<ul>
+  <li>Auskunft über Ihre gespeicherten personenbezogenen Daten zu erhalten (Art. 15 DSGVO)</li>
+  <li>Berichtigung unrichtiger Daten zu verlangen (Art. 16 DSGVO)</li>
+  <li>Löschung Ihrer Daten zu verlangen (Art. 17 DSGVO)</li>
+  <li>Einschränkung der Verarbeitung zu verlangen (Art. 18 DSGVO)</li>
+  <li>Widerspruch gegen die Verarbeitung einzulegen (Art. 21 DSGVO)</li>
+</ul>
+
+<p>
+Zudem haben Sie das Recht, sich bei einer zuständigen Datenschutzaufsichtsbehörde zu beschweren.
+</p>
+
+  <h2>5. Cookies und Tracking</h2>
+<p>
+Diese Website verwendet keine Cookies und keine Tracking- oder Analyse-Tools.
+</p>
+<p>
+Die Übertragung Ihrer Daten erfolgt verschlüsselt mittels HTTPS.
+</p>
+
+
 
 </body>
 </html>
+
 
