--- a/index.html
+++ b/index.html
@@ -236,9 +236,10 @@
                 </form>
 
       <p class="form-hinweis">
-  Mit dem Absenden des Formulars erklären Sie sich damit einverstanden,
-  dass Ihre Angaben zur Bearbeitung Ihrer Anfrage verwendet werden.
-</p>
+        Mit dem Absenden des Formulars erklärst du dich mit der Verarbeitung
+        deiner Daten gemäß meiner <a href="datenschutz.html">Datenschutzerklärung</a> einverstanden.
+    </p>
+
       
         </section>
 
@@ -258,6 +259,7 @@
 
 </body>
 </html>
+
 
 
 
