--- a/datenschutz.html
+++ b/datenschutz.html
@@ -10,8 +10,10 @@
 
 <h2>1. Verantwortliche Stelle</h2>
 <p>
-E-Mail: 	woehrle.katrin@gmail.com
+Katrin Mack<br>
+E-Mail: woehrle.katrin@gmail.com
 </p>
+
 
 
 <h2>2. Hosting und Server-Logfiles</h2>
@@ -32,6 +34,11 @@ Dies sind insbesondere:
   <li>Betriebssystem</li>
   <li>Referrer-URL</li>
 </ul>
+
+  <p>
+Der Hosting-Anbieter ist GitHub Inc., Serverstandorte innerhalb der EU.
+</p>
+
 
 <p>
 Die Verarbeitung erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO
@@ -87,6 +94,11 @@ Sie haben jederzeit das Recht:
 <p>
 Zudem haben Sie das Recht, sich bei einer zuständigen Datenschutzaufsichtsbehörde zu beschweren.
 </p>
+<p>
+Zuständige Aufsichtsbehörde ist der Landesbeauftragte für den Datenschutz
+und die Informationsfreiheit Baden-Württemberg (LfDI BW).
+</p>
+
 
   <h2>5. Cookies und Tracking</h2>
 <p>
@@ -96,9 +108,14 @@ Diese Website verwendet keine Cookies und keine Tracking- oder Analyse-Tools.
 Die Übertragung Ihrer Daten erfolgt verschlüsselt mittels HTTPS.
 </p>
 
+  
+<p>
+Stand: Januar 2026
+</p>
 
 
 </body>
 </html>
+
 
 
