--- a/datenschutz.html
+++ b/datenschutz.html
@@ -109,13 +109,13 @@ Die Übertragung Ihrer Daten erfolgt verschlüsselt mittels HTTPS.
 </p>
 
   
-<p>
-Stand: Januar 2026
-</p>
+<p><em>Stand: Januar 2026</em></p>
+
 
 
 </body>
 </html>
+
 
 
 
