--- a/impressum.html
+++ b/impressum.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" name="robots" content="noindex">
+  <meta charset="UTF-8">
+<meta name="robots" content="noindex, nofollow">
+
   <title>Impressum</title>
 </head>
 <body>
@@ -16,8 +18,9 @@
 </p>
 
 <p>
-  E-Mail: <a href="mailto:mack.katrin83@gmail.com">mack.katrin83@gmail.com</a>
+  E-Mail: <a href="mailto:woehrle.katrin@gmail.com">woehrle.katrin@gmail.com</a>
 </p>
 
 </body>
 </html>
+
