--- a/datenschutz.html
+++ b/datenschutz.html
@@ -11,7 +11,7 @@
 <h2>1. Verantwortliche Stelle</h2>
 <p>
 Katrin Mack<br>
-E-Mail: woehrle.katrin@gmail.com
+E-Mail: <a href="mailto:woehrle.katrin@gmail.com">woehrle.katrin@gmail.com</a>
 </p>
 
 
@@ -115,6 +115,7 @@ Die Übertragung Ihrer Daten erfolgt verschlüsselt mittels HTTPS.
 
 </body>
 </html>
+
 
 
 
