--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
     saubere Umsetzung und konzentriertes Arbeiten.
   </p>
 
-  <p>
-    Nach einem nicht geradlinigen, aber bewusst gewählten Bildungsweg habe ich mich
-    fachlich auf Programmierung spezialisiert und meine Kenntnisse unter anderem
-    durch ein Fernstudium zur Android-App-Programmiererin vertieft.
-  </p>
+      <p>
+        Nach einem nicht geradlinigen, aber bewusst gewählten Bildungsweg habe ich mich
+        fachlich auf Programmierung spezialisiert und meine Kenntnisse durch ein
+        Fernstudium zur Android-App-Programmiererin vertieft.
+        Dabei lag der Fokus auf objektorientierter Programmierung, Anwendungslogik
+        und der eigenständigen Umsetzung funktionaler App-Projekte.
+      </p>  
 
   <p>
     Ich arbeite am produktivsten eigenständig, mit klaren Zielen und ohne unnötige
@@ -80,7 +82,8 @@
       <ul class="arbeitsweise-list">
         <li>
           <strong>Strukturiert & lösungsorientiert</strong><br>
-          Ich arbeite mich systematisch in Probleme ein und lege Wert auf nachvollziehbare, wartbare Lösungen.
+          Ich arbeite mich systematisch in Probleme ein und lege Wert auf nachvollziehbare,
+          wartbare Lösungen – unabhängig davon, ob es sich um Desktop-, Web- oder mobile Anwendungen handelt.
         </li>
 
         <li>
@@ -259,6 +262,7 @@
 
 </body>
 </html>
+
 
 
 
