--- a/projekt-simpledoc.html
+++ b/projekt-simpledoc.html
@@ -1,1 +1,148 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>SimpleDoc – Demo</title>
+  <meta name="description" content="SimpleDoc – strukturierte Notizen für den Praxisalltag (Demo)">
 
+  <style>
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #f7f7f7;
+      color: #222;
+      margin: 0;
+      padding: 2rem;
+    }
+
+    .container {
+      max-width: 720px;
+      margin: 0 auto;
+      background: #fff;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+    }
+
+    h1 {
+      margin-top: 0;
+    }
+
+    .hint {
+      font-size: 0.9rem;
+      color: #555;
+      margin-bottom: 2rem;
+    }
+
+    .form-group {
+      margin-bottom: 1.5rem;
+    }
+
+    label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 0.4rem;
+    }
+
+    input[type="date"],
+    select,
+    textarea {
+      width: 100%;
+      padding: 0.6rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+
+    textarea {
+      resize: vertical;
+    }
+
+    .checkbox-group label {
+      font-weight: 400;
+      display: flex;
+      gap: 0.5rem;
+      margin-bottom: 0.4rem;
+    }
+
+    button {
+      padding: 0.7rem 1.4rem;
+      font-size: 1rem;
+      border-radius: 999px;
+      border: none;
+      background: #2563eb;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #1e4fd6;
+    }
+
+    .demo-note {
+      margin-top: 2rem;
+      font-size: 0.85rem;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+
+  <main class="container">
+    <h1>SimpleDoc</h1>
+    <p class="hint">Geführte Kurznotizen für den Praxisalltag (Demo-Version)</p>
+
+    <form id="simpledoc-form">
+
+      <!-- Termin -->
+      <div class="form-group">
+        <label for="date">Termin-Datum</label>
+        <input type="date" id="date" required>
+      </div>
+
+      <div class="form-group">
+        <label for="type">Terminart</label>
+        <select id="type">
+          <option>Ersttermin</option>
+          <option>Folgetermin</option>
+          <option>Kontrolle</option>
+        </select>
+      </div>
+
+      <!-- Geführte Auswahl -->
+      <div class="form-group">
+        <label>Beobachtungen / Status</label>
+        <div class="checkbox-group">
+          <label><input type="checkbox"> empfindliche Haut</label>
+          <label><input type="checkbox"> Druckschmerz vorhanden</label>          
+          <label><input type="checkbox"> Bereich mit Vorbefund</label>
+          <label><input type="checkbox"> unauffälliger Verlauf</label>
+        </div>
+      </div>
+
+      <!-- Häufige Hinweise -->
+      <div class="form-group">
+        <label>Häufige Hinweise</label>
+        <div class="checkbox-group">
+          <label><input type="checkbox"> bevorzugt Vormittagstermine</label>
+          <label><input type="checkbox"> empfindlich auf Hitze</label>
+          <label><input type="checkbox"> braucht Pausen</label>
+          <label><input type="checkbox"> wiederkehrend</label>
+        </div>
+      </div>
+
+      <!-- Freitext -->
+      <div class="form-group">
+        <label for="notes">Kurze Ergänzung (optional)</label>
+        <textarea id="notes" rows="3" maxlength="200" placeholder="Kurze Ergänzung (optional)"></textarea>
+      </div>
+
+      <button type="submit">Notiz übernehmen (Demo)</button>
+
+    </form>
+
+    <p class="demo-note">Diese Demo speichert keine echten Patientendaten. Inhalte werden nicht dauerhaft gespeichert.</p>
+  </main>
+
+</body>
+</html>
