--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
     <section class="portfolio" id="portfolio">
       <h2>Ausgewählte Projekte</h2>
 
+      
+
+      <section class="projects-old">
+  <details>
+    <summary>Frühere Projekte & Studienarbeiten anzeigen</summary>
+
+    <div class="project-grid">
+      <!-- alte Projekte hier -->
       <article class="projekt projekt-haupt fade-in" aria-labelledby="projekt-bachelor">
         <h3 id="projekt-bachelor">
           Eigenständig entwickeltes Lernprogramm (Bachelorarbeit)
@@ -203,6 +211,13 @@
         </div>
       </div>
     </article>
+    </div>
+
+  </details>
+</section>
+
+
+      
 
     <!-- Abschluss -->
   <p class="portfolio-abschluss">
@@ -262,6 +277,7 @@
 
 </body>
 </html>
+
 
 
 
