--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 
+  <div class="site-notice">
+  Diese Website wird aktuell überarbeitet. Inhalte und Projekte können sich noch ändern.
+</div>
+
+
   <!-- Header / Navigation -->
   <header class="site-header">
     <nav class="main-nav" aria-label="Hauptnavigation">
@@ -315,6 +320,7 @@
 
 </body>
 </html>
+
 
 
 
