--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <details>
     <summary>
       Frühere Projekte & Studienarbeiten
-      <span class="muted">(Design- & Technikstudien)</span>
+      <!--<span class="muted">(Design- & Technikstudien)</span>-->
     </summary>
 
 
@@ -320,6 +320,7 @@
 
 </body>
 </html>
+
 
 
 
