--- a/index.html
+++ b/index.html
@@ -112,6 +112,84 @@
       <h2>Ausgewählte Projekte</h2>
 
       <!-- NEUES HAUPTPROJEKT -->
+        <article class="project featured">
+  <header>
+    <h2>Kindertreff</h2>
+    <p class="subtitle">
+      Ruhige Spielverabredungen ohne Stress
+    </p>
+  </header>
+
+  <section>
+    <p>
+      <strong>Kindertreff</strong> ist eine konzeptionelle Web-Demo, entstanden aus
+      einem realen Alltagsproblem von Eltern mit jüngeren Kindern:
+      Spontane Spielverabredungen zu koordinieren ist oft unnötig aufwendig.
+      Meist müssen mehrere Eltern einzeln angeschrieben werden, nur um
+      herauszufinden, wer überhaupt Zeit hat.
+    </p>
+
+    <p>
+      Die Idee hinter Kindertreff ist bewusst einfach:
+      Eltern können freiwillig und zeitlich begrenzt eintragen,
+      <em>wann ihr Kind zum Spielen verfügbar ist</em> – ohne Chat,
+      ohne sozialen Druck und ohne öffentlichen Charakter.
+    </p>
+  </section>
+
+  <section>
+    <h3>Grundprinzip</h3>
+    <ul>
+      <li>Status statt Kommunikation</li>
+      <li>Übersicht statt Feed</li>
+      <li>Kleine, private Gruppen statt Öffentlichkeit</li>
+    </ul>
+
+    <p>
+      Kindertreff versteht sich nicht als soziales Netzwerk,
+      sondern als ruhiges Koordinationswerkzeug für
+      Nachbarschaften, Kita-Gruppen oder Freundeskreise.
+    </p>
+  </section>
+
+  <section>
+    <h3>Fokus & Gestaltung</h3>
+    <ul>
+      <li>reduziertes, ruhiges UI</li>
+      <li>keine öffentlichen Profile</li>
+      <li>keine unnötige Datensammlung</li>
+      <li>keine Gamification oder Push-Mechaniken</li>
+    </ul>
+
+    <p>
+      Einträge sind bewusst temporär und verschwinden automatisch.
+      Datensparsamkeit, Übersicht und Vertrauen stehen im Vordergrund.
+    </p>
+  </section>
+
+  <section>
+    <h3>Technischer Ansatz</h3>
+    <ul>
+      <li>HTML5 & modernes, frameworkfreies CSS</li>
+      <li>mobile-first & responsive</li>
+      <li>aktuell als statische Web-Demo umgesetzt</li>
+      <li>später denkbar als PWA oder App-Prototyp</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Ziel des Projekts</h3>
+    <p>
+      Ziel ist die Entwicklung einer funktionalen, portfolio-tauglichen Demo
+      mit klarem konzeptionellen Fokus, sauberer Struktur und bewusster
+      Reduktion – sowie die Prüfung, ob aus einer kleinen, ruhigen Idee
+      langfristig echter Mehrwert entstehen kann.
+    </p>
+  </section>
+</article>
+
+
+      
         <article class="project-card project-main fade-in">
           <!-- SimpleDoc -->
           <article class="project-card project-main fade-in" aria-labelledby="project-simpledoc">
@@ -320,6 +398,7 @@
 
 </body>
 </html>
+
 
 
 
