--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <h2>Ausgewählte Projekte</h2>
 
       <!-- NEUES HAUPTPROJEKT -->
-        <article class="project featured">
+        <article class="project-card project-main fade-in">
   <header>
     <h2>Kindertreff</h2>
     <p class="subtitle">
@@ -398,6 +398,7 @@
 
 </body>
 </html>
+
 
 
 
