--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
 
       <!-- NEUES HAUPTPROJEKT -->
         <article class="project-card project-main fade-in">
+          <article class="project-card project-main fade-in" aria-labelledby="project-kindertreff">
   <header>
-    <h2>Kindertreff</h2>
+    <h3 id="project-kindertreff">Kindertreff</h3>
     <p class="subtitle">
       Ruhige Spielverabredungen ohne Stress
     </p>
@@ -186,6 +187,7 @@
       langfristig echter Mehrwert entstehen kann.
     </p>
   </section>
+          </article>
 </article>
 
 
@@ -398,6 +400,7 @@
 
 </body>
 </html>
+
 
 
 
