--- a/index.html
+++ b/index.html
@@ -181,10 +181,8 @@
   <section>
     <h3>Ziel des Projekts</h3>
     <p>
-      Ziel ist die Entwicklung einer funktionalen, portfolio-tauglichen Demo
-      mit klarem konzeptionellen Fokus, sauberer Struktur und bewusster
-      Reduktion – sowie die Prüfung, ob aus einer kleinen, ruhigen Idee
-      langfristig echter Mehrwert entstehen kann.
+      Ziel ist die Entwicklung einer funktionalen Demo mit klarem konzeptionellen Fokus,
+      sauberer Struktur und bewusster Reduktion
     </p>
   </section>
           </article>
@@ -400,6 +398,7 @@
 
 </body>
 </html>
+
 
 
 
